src/popup/styles.scss
[data-theme='auto'] {
  @media screen and (prefers-color-scheme: dark) {
    --font-color: #c9d1d9;
    --theme-color: #202124;
    --active-color: #3c4043;
  }
  @media screen and (prefers-color-scheme: light) {
    --font-color: #24292f;
    --theme-color: #ffffff;
    --active-color: #eaecf0;
  }
}

[data-theme='dark'] {
  --font-color: #c9d1d9;
  --theme-color: #202124;
  --active-color: #3c4043;
}

[data-theme='light'] {
  --font-color: #24292f;
  --theme-color: #ffffff;
  --active-color: #eaecf0;
}

.container {
  width: 440px;
  height: 560px;
  padding: 20px;
  overflow-y: auto;
}

.container legend {
  font-weight: bold;
}

.container form {
  margin-bottom: 0;
}

.container fieldset {
  margin-bottom: 0;
}

.footer {
  width: 90%;
  position: absolute;
  bottom: 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: var(--active-color);
  border-radius: 5px;
  padding: 6px;
}

.popup-tab {
  display: inline-block;
  position: relative;
  list-style: none;
  padding: 6px 12px 0;
  cursor: pointer;
  border-radius: 5px;
  margin-right: 2px;
  background-color: var(--theme-color);
  color: var(--font-color);

  &--selected {
    background: var(--active-color);
  }
}

